tests/errors/syntax.MissingClosingBracket.res
>> Syntax | File: syntax.MissingClosingBracket.art
    error | Line: 6
          | 
          | missing closing bracket
          | 
          | near: t "done" print [ this is ...
          |                      ^